Fixes to some pages/corrections aaaaaaand some ol > li spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8700,6 +8700,12 @@ ins {
 .green-text {
   color: #548228;
 }
+.grey-text {
+  color: #a9a9a9;
+}
+ol li {
+  margin: 0.5em;
+}
 @media print {
   nav.navbar-static-side {
     display: none;
