--- a/resources/assets/less/inspinia/custom.less
+++ b/resources/assets/less/inspinia/custom.less
@@ -437,3 +437,11 @@ ins {
 .green-text {
   color: #548228;
 }
+
+.grey-text {
+  color: #a9a9a9;
+}
+
+ol li {
+  margin: 0.5em;
+}
